--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="Positioning and Layout.css">
+    <link rel="stylesheet" href="Positioning-and-Layout.css">
 </head>
 
 <body>
